MNT: Update mypi, flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,13 @@
 [flake8]
-max-line-length = 100
+ignore = E203, E266, E501, W503, F403, F401
+max-line-length = 140
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
 
 [mypy]
-warn_unused_ignores = True
-warn_redundant_casts = True
-ignore_missing_imports = True
+python_version = 3.9
+disable_error_code = misc, import, operator
+show_error_codes = True
+warn_unused_configs = True
+pretty = True
+color_output = True
