MNT: Update tox config, rename method

--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,14 @@ envlist = py39
 requires =
 	tox-pyenv
 
-dependencies:
-  override:
-    - pip install -U tox tox-pyenv
-    - pyenv install --skip-existing at-3.9.1
-    - pyenv local at-3.9.1
-
 [pytest]
 testpaths =
     backtesting
 
 [testenv]
+deps =
+    pytest
+    scikit-optimize
 commands =
     pytest
 
