--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,35 @@
+[metadata]
+name = backtesting
+version = 0.3.1
+
+[options]
+packages = find:
+include_package_data = true
+install_requires =
+    numpy
+    pandas
+    bokeh
+    tqdm
+    scikit-optimize
+python_requires = >=3.9
+package_dir =
+    =.
+
+[options.extras_require]
+test =
+    tox
+    pytest
+    pytest-cov
+typing =
+    mypy
+    typing-extensions
+
+[options.packages.find]
+where = .
+
+[options.package_data]
+* = *.js
+
 [flake8]
 ignore = E203, E266, E501, W503, F403, F401
 max-complexity = 18
