--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ install_requires =
     bokeh
     tqdm
     scikit-optimize
-python_requires = >=3.9
+python_requires = >=3.8.8
 package_dir =
     =.
 
@@ -40,6 +40,6 @@ select = B,C,E,F,W,T4,B9
 color_output = True
 disable_error_code = misc, import, operator
 pretty = True
-python_version = 3.9
+python_version = 3.8, 3.9
 show_error_codes = True
 warn_unused_configs = True
